# Factorio

./: .gitignore  pyproject.toml  readme.md
Factorium/: Mods.py  __init__.py  __main__.py
Mods/: raw.sh
Mods/fast-demolisher/: control.lua  data-updates.lua  data.lua  info.json  readme.md  settings.lua  shared.lua
Mods/wide-demolisher/: data.lua  info.json
