[project]
name = "factorium"
version = "1.0.0"
description = "Tremeschin's Factorio Collection"
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
factorium = "Factorium.__main__:main"

[tool.uv.workspace]
members = []

[tool.uv]
dev-dependencies = [
    "factorium"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Factorium"]
