[project]
name = "factorium"
version = "0.0.0"
description = "Tremeschin's Factorio Collection"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "broken-source>=0.0.0",
]

[project.scripts]
factorium = "Factorium.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["Factorium"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
